# ChaosRustWeb

./: .gitignore  Cargo.toml  ChaosRustWeb.code-workspace  README.md  README.new.md  Trunk.toml  index.html
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  pages.yml
src/: main.rs
