[package]
name = "chaos_rust_web"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["webgl2"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Screen", "Navigator"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
